...

  // Sandwiches and subs
  'Subway', 'Quiznos', "Jimmy John's", "Jersey Mike's", 'Firehouse Subs',
  'Mr Sub', 'Pita Pit', 'Extreme Pita', "Osmow's", 'Freshii', 'Panera',

  // Coffee and doughnuts
  'Starbucks', 'Tim Hortons', 'Dunkin', 'Second Cup', "Peet's",
  'Caribou Coffee', 'Blenz', 'Krispy Kreme', 'Cinnabon',

  // Pizza
  "Domino's", "Papa John's", 'Little Caesars', 'Boston Pizza',
  'Pizza Pizza', 'Pizzaville',

...
